--- a/DecisionTree.ipynb
+++ b/DecisionTree.ipynb
@@ -309,7 +309,7 @@
    "outputs": [],
    "source": [
     "# n_features = cancer.data.shape[1]\n",
-    "# plt.bar(range(n_features),tree.feature_importances_,align='center')\n",
+    "# plt.barh(range(n_features),tree.feature_importances_,align='center')\n",
     "# plt.yticks(np.arange(n_features),cancer.feature_names)\n",
     "# plt.xlabel('Feature Importance')\n",
     "# plt.ylabel('Feature')\n",
